// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components > Random handles rejected request 1`] = `
<DocumentFragment>
  <div
    class="sc-d758bdee-0 kJxtKN"
  >
    <h2
      class="sc-d758bdee-1 etlXbV"
    >
      Async Random
    </h2>
    <button
      class="sc-d758bdee-2 duNmpg"
      disabled=""
      type="button"
    >
      Get random number
    </button>
    <div>
      Getting number
    </div>
  </div>
</DocumentFragment>
`;

exports[`components > Random handles rejected request 2`] = `
<DocumentFragment>
  <div
    class="sc-d758bdee-0 kJxtKN"
  >
    <h2
      class="sc-d758bdee-1 etlXbV"
    >
      Async Random
    </h2>
    <button
      class="sc-d758bdee-2 duNmpg"
      type="button"
    >
      Get random number
    </button>
    <div>
      Ups...
    </div>
  </div>
</DocumentFragment>
`;

exports[`components > Random handles successful request 1`] = `
<DocumentFragment>
  <div
    class="sc-d758bdee-0 kJxtKN"
  >
    <h2
      class="sc-d758bdee-1 etlXbV"
    >
      Async Random
    </h2>
    <button
      class="sc-d758bdee-2 duNmpg"
      disabled=""
      type="button"
    >
      Get random number
    </button>
    <div>
      Getting number
    </div>
  </div>
</DocumentFragment>
`;

exports[`components > Random handles successful request 2`] = `
<DocumentFragment>
  <div
    class="sc-d758bdee-0 kJxtKN"
  >
    <h2
      class="sc-d758bdee-1 etlXbV"
    >
      Async Random
    </h2>
    <button
      class="sc-d758bdee-2 duNmpg"
      type="button"
    >
      Get random number
    </button>
    <div>
      Number from random.org: 
      <strong>
        6
      </strong>
    </div>
  </div>
</DocumentFragment>
`;

exports[`components > Random renders different store states when isLoading === false && hasError === false && isFulfilled === false 1`] = `
<DocumentFragment>
  <div
    class="sc-d758bdee-0 kJxtKN"
  >
    <h2
      class="sc-d758bdee-1 etlXbV"
    >
      Async Random
    </h2>
    <button
      class="sc-d758bdee-2 duNmpg"
      type="button"
    >
      Get random number
    </button>
    <div>
      Click the button to get random number
    </div>
  </div>
</DocumentFragment>
`;

exports[`components > Random renders different store states when isLoading === false && hasError === false && isFulfilled === true 1`] = `
<DocumentFragment>
  <div
    class="sc-d758bdee-0 kJxtKN"
  >
    <h2
      class="sc-d758bdee-1 etlXbV"
    >
      Async Random
    </h2>
    <button
      class="sc-d758bdee-2 duNmpg"
      type="button"
    >
      Get random number
    </button>
    <div>
      Number from random.org: 
      <strong>
        1
      </strong>
    </div>
  </div>
</DocumentFragment>
`;

exports[`components > Random renders different store states when isLoading === false && hasError === true && isFulfilled === false 1`] = `
<DocumentFragment>
  <div
    class="sc-d758bdee-0 kJxtKN"
  >
    <h2
      class="sc-d758bdee-1 etlXbV"
    >
      Async Random
    </h2>
    <button
      class="sc-d758bdee-2 duNmpg"
      type="button"
    >
      Get random number
    </button>
    <div>
      Ups...
    </div>
  </div>
</DocumentFragment>
`;

exports[`components > Random renders different store states when isLoading === true && hasError === false && isFulfilled === false 1`] = `
<DocumentFragment>
  <div
    class="sc-d758bdee-0 kJxtKN"
  >
    <h2
      class="sc-d758bdee-1 etlXbV"
    >
      Async Random
    </h2>
    <button
      class="sc-d758bdee-2 duNmpg"
      disabled=""
      type="button"
    >
      Get random number
    </button>
    <div>
      Getting number
    </div>
  </div>
</DocumentFragment>
`;
